--- a/index.html
+++ b/index.html
@@ -1,1 +1,1 @@
-<a href="hushus46.github.io/28B-Notes/Main.pdf" target="_blank">PDF.</a>
+ <embed src="https://hushus46.github.io/28B-Notes/Main.pdf" width="100%" height="850px"/>
